Added the actuall text in home apge

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -189,7 +189,7 @@
             <h3>
               <a id="PersonalCategory">Personal Care Services</a>
             </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Hair cut, Manicure, Pedicure etc...</p>
           </div>
         </div>
         <div class="img_info_container">
@@ -198,7 +198,7 @@
             <h3>
               <a id="IndoorCategory">Indoor Services</a>
             </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Clogged Sink, Changing light bulb, Fixing the Wifi</p>
           </div>
         </div>
         <div class="img_info_container">
@@ -207,7 +207,7 @@
             <h3>
               <a id="OutdoorServices"> Outdoor Services</a>
             </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lawn cleaning, Fixing solar panels, Pool Cleaning.</p>
           </div>
         </div>
         <div class="img_info_container">
@@ -216,7 +216,7 @@
             <h3>
               <a id="PremiumServices"> Premium Services</a>
             </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Pet Grooming, Yoga classes, moving assistance.</p>
           </div>
         </div>
       </div>
