--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -20,12 +20,6 @@
 </head>
 
 <body>
-  <!-- <header>
-    <h1>Home Genie</h1>
-  </header>
-  <main> <a href="about.html">About</a></main>
-  <footer></footer> -->
-
   <!-- For the Developer Copy Start from here  line 148-->
   <header class="HomePage_header">
     <div class="LogoContainer">
@@ -65,13 +59,18 @@
                 <li>
                   <p class="dk-WelcomeUser">Hello, <span class="loggedUserName"></span></p>
                 </li>
+                <li class="listLoginBtn">
+                  <a class="LoginBtn" href="Login.html">Login</a>
+                </li>
 
-                <li>
-                  <a href="UpdateProfile.html">Profile</a>
-                </li>
-                <li>
-                  <a class="logoutBtn">Logout</a>
-                </li>
+                <ul class="ShowLoginControls">
+                  <li>
+                    <a href="UpdateProfile.html">Profile</a>
+                  </li>
+                  <li>
+                    <a class="logoutBtn">Logout</a>
+                  </li>
+                </ul>
               </ul>
             </div>
           </div>
@@ -111,23 +110,32 @@
           <p class="mb-menu-text">About Us</p>
         </a>
       </li>
-      <li>
-        <a class="mb-menuAnchor" href="UpdateProfile.html">
-          <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
-          <p class="mb-menu-text">Profile</p>
+      <li class="listLoginBtn">
+        <a class="mb-menuAnchor" href="Login.html"> <span class="iconify"
+          data-icon="ant-design:login-outlined"></span>
+          <p class="mb-menu-text">Login</p>
         </a>
       </li>
-      <li>
-        <a class="logoutBtn mb-menuAnchor" href="Login.html">
-          <strong>
-            <span class="iconify" data-icon="ri:logout-circle-line" style="font-size: 20px;">
-            </span>
-          </strong>
-          <strong>
-            <p class="mb-menu-text">Logout?</p>
-          </strong>
-        </a>
-      </li>
+
+      <ul class="ShowLoginControls">
+        <li>
+          <a class="mb-menuAnchor" href="UpdateProfile.html">
+            <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
+            <p class="mb-menu-text">Profile</p>
+          </a>
+        </li>
+        <li>
+          <a class="logoutBtn mb-menuAnchor" href="Login.html">
+            <strong>
+              <span class="iconify" data-icon="ri:logout-circle-line" style="font-size: 20px;">
+              </span>
+            </strong>
+            <strong>
+              <p class="mb-menu-text">Logout?</p>
+            </strong>
+          </a>
+        </li>
+      </ul>
     </ul>
   </nav>
 
