--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -111,8 +111,7 @@
         </a>
       </li>
       <li class="listLoginBtn">
-        <a class="mb-menuAnchor" href="Login.html"> <span class="iconify"
-          data-icon="ant-design:login-outlined"></span>
+        <a class="mb-menuAnchor" href="Login.html"> <span class="iconify" data-icon="ant-design:login-outlined"></span>
           <p class="mb-menu-text">Login</p>
         </a>
       </li>
